--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "suggest": {
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "autoload": {
         "psr-4": {
             "Windwalker\\Html\\": ""
