--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "LGPL-2.0-or-later",
     "require": {
         "php": ">=5.5.9",
-        "windwalker/dom": "~3.0"
+        "windwalker/dom": "~3.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "windwalker/test": "~3.0"
