--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     "license": "MIT",
     "require": {
         "php": ">=8.0.0",
-        "windwalker/utilities": "4.x-dev"
+        "windwalker/utilities": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0||^9.0",
-        "windwalker/test": "4.x-dev"
+        "windwalker/test": "^4.0"
     },
     "suggest": {
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "autoload": {
         "psr-4": {
             "Windwalker\\Html\\": "src/"
@@ -36,7 +36,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-4": "4.x-dev"
+            "dev-master": "4.x-dev"
         }
     },
     "config": {
